Solved problems with scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -178,10 +178,23 @@ body {
   font-size: 16px;
   overflow-x: hidden;
   position: relative;
+  overflow-y: overlay;
+}
+
+body::-webkit-scrollbar {
+  background-color: rgba(238, 238, 238, 0.2);
+  width: 7px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(112, 112, 112, 0.5);
+  border-radius: 21px;
 }
 
 .scrollHidden {
   overflow-y: hidden;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .none {
@@ -899,6 +912,17 @@ body {
   padding-top: 42px;
   transition: all 0.5s;
   overflow-y: scroll;
+}
+
+.header__aside::-webkit-scrollbar {
+  background-color: #fff;
+  height: 10px;
+  width: 5px;
+}
+
+.header__aside::-webkit-scrollbar-thumb {
+  background-color: rgba(54, 56, 56, 0.2);
+  border-radius: 20px;
 }
 
 .header__aside.closed {
